Refactor CleanCapture for improved print fidelity and UX
- Implement clone-and-print to capture the final modified layout for PDF output.
- Force a robust layout reflow with a slight delay before printing.
- Add a "Reset" button to restore the original page layout.
- Enhance control panel positioning to ensure it remains on-screen.
- Add keyboard support for moving elements (arrows) and deleting them (Delete key).
- Improve accessibility by adding ARIA roles and labels.
- Modularize the JavaScript code for better maintainability.

--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "manifest_version": 3,
   "name": "CleanCapture",
   "version": "1.0",
-  "description": "Capture, edit and save a page as PDF with undo and keyboard controls.",
+  "description": "Capture, interactively edit and print (or save as PDF) webpages with undo, reset, and keyboard controls.",
   "action": {
     "default_title": "CleanCapture"
   },
